# go-flif

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  reader.go  writer.go
internal/wrapper/: common.go  decoder.go  encoder.go
testdata/: README.md  androidify.flif  gopher-iccp.flif  gopher-mini-16bit.flif  gopher-mini.flif  gopher.flif
wrapper/: common-func.go  common.go  common_mock_test.go  common_test.go  decoder-func.go  decoder.go  decoder_mock_test.go  decoder_test.go  encoder-func.go  encoder.go  encoder_mock_test.go  encoder_test.go  error.go  wrapper.go
